CppBridge/library.h

_declspec(dllexport) void __stdcall TL_Context_ClearLineCallback(asIScriptContext *context);
_declspec(dllexport) asUINT __stdcall TL_Context_GetCallstackSize(const asIScriptContext *context);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Context_GetFunction(asIScriptContext *context, asUINT stackLevel);
_declspec(dllexport) int __stdcall TL_Context_GetLineNumber(asIScriptContext *context, asUINT stackLevel, int *column,
                                       const char **sectionName);
_declspec(dllexport) int __stdcall TL_Context_GetVarCount(asIScriptContext *context, asUINT stackLevel);
_declspec(dllexport) int __stdcall TL_Context_GetVar(asIScriptContext *context, asUINT varIndex, asUINT stackLevel, const char **name,
                                int *typeId, asETypeModifiers *typeModifiers, bool *isVarOnHeap, int *stackOffset);
_declspec(dllexport) const char * __stdcall TL_Context_GetVarDeclaration(asIScriptContext *context, asUINT varIndex, asUINT stackLevel,
                                                    bool includeNamespace);
_declspec(dllexport) void * __stdcall TL_Context_GetAddressOfVar(asIScriptContext *context, asUINT varIndex, asUINT stackLevel,
                                            bool dontDereference, bool returnAddressOfUnitializedObjects);
_declspec(dllexport) bool __stdcall TL_Context_IsVarInScope(asIScriptContext *context, asUINT varIndex, asUINT stackLevel);
_declspec(dllexport) int __stdcall TL_Context_GetThisTypeId(asIScriptContext *context, asUINT stackLevel);
_declspec(dllexport) void * __stdcall TL_Context_GetThisPointer(asIScriptContext *context, asUINT stackLevel);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Context_GetSystemFunction(asIScriptContext *context);
_declspec(dllexport) void * __stdcall TL_Context_SetUserData(asIScriptContext *context, void *data, asPWORD type);
_declspec(dllexport) void * __stdcall TL_Context_GetUserData(const asIScriptContext *context, asPWORD type);
_declspec(dllexport) int __stdcall TL_Context_StartDeserialization(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_FinishDeserialization(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_PushFunction(asIScriptContext *context, asIScriptFunction *func, void *object);
_declspec(dllexport) int __stdcall TL_Context_GetStateRegisters(asIScriptContext *context, asUINT stackLevel,
                                           asIScriptFunction **callingSystemFunction,
                                           asIScriptFunction **initialFunction, asDWORD *origStackPointer,
                                           asDWORD *argumentsSize, asQWORD *valueRegister, void **objectRegister,
                                           asITypeInfo **objectTypeRegister);
_declspec(dllexport) int __stdcall TL_Context_GetCallStateRegisters(asIScriptContext *context, asUINT stackLevel, asDWORD *stackFramePointer,
                                               asIScriptFunction **currentFunction, asDWORD *programPointer,
                                               asDWORD *stackPointer, asDWORD *stackIndex);
_declspec(dllexport) int __stdcall TL_Context_SetStateRegisters(asIScriptContext *context, asUINT stackLevel,
                                           asIScriptFunction *callingSystemFunction, asIScriptFunction *initialFunction,
                                           asDWORD origStackPointer, asDWORD argumentsSize, asQWORD valueRegister,
                                           void *objectRegister, asITypeInfo *objectTypeRegister);
_declspec(dllexport) int __stdcall TL_Context_SetCallStateRegisters(asIScriptContext *context, asUINT stackLevel, asDWORD stackFramePointer,
                                               asIScriptFunction *currentFunction, asDWORD programPointer,
                                               asDWORD stackPointer, asDWORD stackIndex);
_declspec(dllexport) int __stdcall TL_Context_GetArgsOnStackCount(asIScriptContext *context, asUINT stackLevel);
_declspec(dllexport) int __stdcall TL_Context_GetArgOnStack(asIScriptContext *context, asUINT stackLevel, asUINT arg, int *typeId,
                                       asUINT *flags, void **address);
_declspec(dllexport) int __stdcall TL_Object_AddRef(const asIScriptObject *obj);
_declspec(dllexport) int __stdcall TL_Object_Release(const asIScriptObject *obj);
_declspec(dllexport) asILockableSharedBool * __stdcall TL_Object_GetWeakRefFlag(const asIScriptObject *obj);
_declspec(dllexport) int __stdcall TL_Object_GetTypeId(const asIScriptObject *obj);
_declspec(dllexport) asITypeInfo * __stdcall TL_Object_GetObjectType(const asIScriptObject *obj);
_declspec(dllexport) asUINT __stdcall TL_Object_GetPropertyCount(const asIScriptObject *obj);
_declspec(dllexport) int __stdcall TL_Object_GetPropertyTypeId(const asIScriptObject *obj, asUINT prop);
_declspec(dllexport) const char * __stdcall TL_Object_GetPropertyName(const asIScriptObject *obj, asUINT prop);
_declspec(dllexport) void * __stdcall TL_Object_GetAddressOfProperty(asIScriptObject *obj, asUINT prop);
_declspec(dllexport) asIScriptEngine * __stdcall TL_Object_GetEngine(const asIScriptObject *obj);
_declspec(dllexport) int __stdcall TL_Object_CopyFrom(asIScriptObject *obj, const asIScriptObject *other);
_declspec(dllexport) void * __stdcall TL_Object_SetUserData(asIScriptObject *obj, void *data, asPWORD type);
_declspec(dllexport) void * __stdcall TL_Object_GetUserData(const asIScriptObject *obj, asPWORD type);
_declspec(dllexport) asIScriptEngine * __stdcall TL_TypeInfo_GetEngine(const asITypeInfo *type);
_declspec(dllexport) const char * __stdcall TL_TypeInfo_GetConfigGroup(const asITypeInfo *type);
_declspec(dllexport) asDWORD __stdcall TL_TypeInfo_GetAccessMask(const asITypeInfo *type);
_declspec(dllexport) asIScriptModule * __stdcall TL_TypeInfo_GetModule(const asITypeInfo *type);
_declspec(dllexport) int __stdcall TL_TypeInfo_AddRef(const asITypeInfo *type);
_declspec(dllexport) int __stdcall TL_TypeInfo_Release(const asITypeInfo *type);
_declspec(dllexport) const char * __stdcall TL_TypeInfo_GetName(const asITypeInfo *type);
_declspec(dllexport) const char * __stdcall TL_TypeInfo_GetNamespace(const asITypeInfo *type);
_declspec(dllexport) asITypeInfo * __stdcall TL_TypeInfo_GetBaseType(const asITypeInfo *type);
_declspec(dllexport) bool __stdcall TL_TypeInfo_DerivesFrom(const asITypeInfo *type, const asITypeInfo *objType);
_declspec(dllexport) asQWORD __stdcall TL_TypeInfo_GetFlags(const asITypeInfo *type);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetSize(const asITypeInfo *type);
_declspec(dllexport) int __stdcall TL_TypeInfo_GetTypeId(const asITypeInfo *type);
_declspec(dllexport) int __stdcall TL_TypeInfo_GetSubTypeId(const asITypeInfo *type, asUINT subTypeIndex);
_declspec(dllexport) asITypeInfo * __stdcall TL_TypeInfo_GetSubType(const asITypeInfo *type, asUINT subTypeIndex);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetSubTypeCount(const asITypeInfo *type);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetInterfaceCount(const asITypeInfo *type);
_declspec(dllexport) asITypeInfo * __stdcall TL_TypeInfo_GetInterface(const asITypeInfo *type, asUINT index);
_declspec(dllexport) bool __stdcall TL_TypeInfo_Implements(const asITypeInfo *type, const asITypeInfo *objType);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetFactoryCount(const asITypeInfo *type);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetFactoryByIndex(const asITypeInfo *type, asUINT index);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetFactoryByDecl(const asITypeInfo *type, const char *decl);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetMethodCount(const asITypeInfo *type);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetMethodByIndex(const asITypeInfo *type, asUINT index, bool getVirtual);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetMethodByName(const asITypeInfo *type, const char *name, bool getVirtual);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetMethodByDecl(const asITypeInfo *type, const char *decl, bool getVirtual);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetPropertyCount(const asITypeInfo *type);