CsharpLoader/ACL/Private/NativeBindings.cs


    [LibraryImport(DllName, EntryPoint = "TL_Context_ClearLineCallback")]
    internal static partial void TL_Context_ClearLineCallback(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetCallstackSize")]
    internal static partial uint TL_Context_GetCallstackSize(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetFunction")]
    internal static partial IntPtr TL_Context_GetFunction(IntPtr context, uint stackLevel);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetLineNumber")]
    internal static partial int TL_Context_GetLineNumber(
        IntPtr context,
        uint stackLevel,
        IntPtr column,
        IntPtr sectionName);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetVarCount")]
    internal static partial int TL_Context_GetVarCount(IntPtr context, uint stackLevel);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetVar")]
    internal static partial int TL_Context_GetVar(
        IntPtr context,
        uint varIndex,
        uint stackLevel,
        IntPtr name,
        IntPtr typeId,
        IntPtr typeModifiers,
        IntPtr isVarOnHeap,
        IntPtr stackOffset);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetVarDeclaration")]
    internal static partial IntPtr TL_Context_GetVarDeclaration(
        IntPtr context,
        uint varIndex,
        uint stackLevel,
        [MarshalAs(UnmanagedType.Bool)] bool includeNamespace);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetAddressOfVar")]
    internal static partial IntPtr TL_Context_GetAddressOfVar(
        IntPtr context,
        uint varIndex,
        uint stackLevel,
        [MarshalAs(UnmanagedType.Bool)] bool dontDereference,
        [MarshalAs(UnmanagedType.Bool)] bool returnAddressOfUnitializedObjects);

    [LibraryImport(DllName, EntryPoint = "TL_Context_IsVarInScope")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Context_IsVarInScope(
        IntPtr context,
        uint varIndex,
        uint stackLevel);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetThisTypeId")]
    internal static partial int TL_Context_GetThisTypeId(IntPtr context, uint stackLevel);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetThisPointer")]
    internal static partial IntPtr TL_Context_GetThisPointer(IntPtr context, uint stackLevel);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetSystemFunction")]
    internal static partial IntPtr TL_Context_GetSystemFunction(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetUserData")]
    internal static partial IntPtr TL_Context_SetUserData(IntPtr context, IntPtr data, uint type);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetUserData")]
    internal static partial IntPtr TL_Context_GetUserData(IntPtr context, uint type);

    [LibraryImport(DllName, EntryPoint = "TL_Context_StartDeserialization")]
    internal static partial int TL_Context_StartDeserialization(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_FinishDeserialization")]
    internal static partial int TL_Context_FinishDeserialization(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_PushFunction")]
    internal static partial int TL_Context_PushFunction(
        IntPtr context,
        IntPtr func,
        IntPtr objectPtr);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetStateRegisters")]
    internal static partial int TL_Context_GetStateRegisters(
        IntPtr context,
        uint stackLevel,
        IntPtr callingSystemFunction,
        IntPtr initialFunction,
        IntPtr origStackPointer,
        IntPtr argumentsSize,
        IntPtr valueRegister,
        IntPtr objectRegister,
        IntPtr objectTypeRegister);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetCallStateRegisters")]
    internal static partial int TL_Context_GetCallStateRegisters(
        IntPtr context,
        uint stackLevel,
        IntPtr stackFramePointer,
        IntPtr currentFunction,
        IntPtr programPointer,
        IntPtr stackPointer,
        IntPtr stackIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetStateRegisters")]
    internal static partial int TL_Context_SetStateRegisters(
        IntPtr context,
        uint stackLevel,
        IntPtr callingSystemFunction,
        IntPtr initialFunction,
        IntPtr origStackPointer,
        IntPtr argumentsSize,
        long valueRegister,
        IntPtr objectRegister,
        IntPtr objectTypeRegister);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetCallStateRegisters")]
    internal static partial int TL_Context_SetCallStateRegisters(
        IntPtr context,
        uint stackLevel,
        uint stackFramePointer,
        IntPtr currentFunction,
        uint programPointer,
        uint stackPointer,
        uint stackIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetArgsOnStackCount")]
    internal static partial int TL_Context_GetArgsOnStackCount(IntPtr context, uint stackLevel);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetArgOnStack")]
    internal static partial int TL_Context_GetArgOnStack(
        IntPtr context,
        uint stackLevel,
        uint arg,
        IntPtr typeId,
        IntPtr flags,
        IntPtr address);

    #endregion

    #region Object Functions

    [LibraryImport(DllName, EntryPoint = "TL_Object_AddRef")]
    internal static partial int TL_Object_AddRef(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_Release")]
    internal static partial int TL_Object_Release(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetWeakRefFlag")]
    internal static partial IntPtr TL_Object_GetWeakRefFlag(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetTypeId")]
    internal static partial int TL_Object_GetTypeId(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetObjectType")]
    internal static partial IntPtr TL_Object_GetObjectType(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetPropertyCount")]
    internal static partial uint TL_Object_GetPropertyCount(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetPropertyTypeId")]
    internal static partial int TL_Object_GetPropertyTypeId(IntPtr obj, uint prop);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetPropertyName")]
    internal static partial IntPtr TL_Object_GetPropertyName(IntPtr obj, uint prop);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetAddressOfProperty")]
    internal static partial IntPtr TL_Object_GetAddressOfProperty(IntPtr obj, uint prop);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetEngine")]
    internal static partial IntPtr TL_Object_GetEngine(IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Object_CopyFrom")]
    internal static partial int TL_Object_CopyFrom(IntPtr obj, IntPtr other);

    [LibraryImport(DllName, EntryPoint = "TL_Object_SetUserData")]
    internal static partial IntPtr TL_Object_SetUserData(IntPtr obj, IntPtr data, uint type);

    [LibraryImport(DllName, EntryPoint = "TL_Object_GetUserData")]
    internal static partial IntPtr TL_Object_GetUserData(IntPtr obj, uint type);

    #endregion

    #region TypeInfo Functions

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetEngine")]
    internal static partial IntPtr TL_TypeInfo_GetEngine(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetConfigGroup")]
    internal static partial IntPtr TL_TypeInfo_GetConfigGroup(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetAccessMask")]
    internal static partial uint TL_TypeInfo_GetAccessMask(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetModule")]
    internal static partial IntPtr TL_TypeInfo_GetModule(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_AddRef")]
    internal static partial int TL_TypeInfo_AddRef(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_Release")]
    internal static partial int TL_TypeInfo_Release(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetName")]
    internal static partial IntPtr TL_TypeInfo_GetName(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetNamespace")]
    internal static partial IntPtr TL_TypeInfo_GetNamespace(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetBaseType")]
    internal static partial IntPtr TL_TypeInfo_GetBaseType(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_DerivesFrom")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_TypeInfo_DerivesFrom(IntPtr type, IntPtr objType);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetFlags")]
    internal static partial ulong TL_TypeInfo_GetFlags(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetSize")]
    internal static partial uint TL_TypeInfo_GetSize(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetTypeId")]
    internal static partial int TL_TypeInfo_GetTypeId(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetSubTypeId")]
    internal static partial int TL_TypeInfo_GetSubTypeId(IntPtr type, uint subTypeIndex);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetSubType")]
    internal static partial IntPtr TL_TypeInfo_GetSubType(IntPtr type, uint subTypeIndex);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetSubTypeCount")]
    internal static partial uint TL_TypeInfo_GetSubTypeCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetInterfaceCount")]
    internal static partial uint TL_TypeInfo_GetInterfaceCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetInterface")]
    internal static partial IntPtr TL_TypeInfo_GetInterface(IntPtr type, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_Implements")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_TypeInfo_Implements(IntPtr type, IntPtr objType);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetFactoryCount")]
    internal static partial uint TL_TypeInfo_GetFactoryCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetFactoryByIndex")]
    internal static partial IntPtr TL_TypeInfo_GetFactoryByIndex(IntPtr type, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetFactoryByDecl")]
    internal static partial IntPtr TL_TypeInfo_GetFactoryByDecl(
        IntPtr type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetMethodCount")]
    internal static partial uint TL_TypeInfo_GetMethodCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetMethodByIndex")]
    internal static partial IntPtr TL_TypeInfo_GetMethodByIndex(
        IntPtr type,
        uint index,
        [MarshalAs(UnmanagedType.Bool)] bool getVirtual);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetMethodByName")]
    internal static partial IntPtr TL_TypeInfo_GetMethodByName(
        IntPtr type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.Bool)] bool getVirtual);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetMethodByDecl")]
    internal static partial IntPtr TL_TypeInfo_GetMethodByDecl(
        IntPtr type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl,
        [MarshalAs(UnmanagedType.Bool)] bool getVirtual);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetPropertyCount")]
    internal static partial uint TL_TypeInfo_GetPropertyCount(IntPtr type);
